# Simple_Blog_on_Django

./: README.md  pyproject.toml
SimpleBlog/SimpleBlog/: settings.py  urls.py
SimpleBlog/blog/: admin.py  models.py  serializers.py  urls.py  users.py  views.py
SimpleBlog/blog/migrations/: 0001_initial.py  0002_post_author.py  0003_alter_post_datetime.py  0004_news.py  0005_rename_news_new.py
SimpleBlog/blog/templates/: base.html
SimpleBlog/blog/templates/blog/: error.html  index.html  post_detail.html  post_list.html
SimpleBlog/templates/: base_generic.html
SimpleBlog/templates/registration/: logged_out.html  login.html  signup.html
